fix footer gap

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,12 @@
 .footer {
-   display: flex;
-   justify-content: space-between;
-  border-radius: 0.5rem;
-  font-family: "Atkinson Hyperlegible", "Atkinson Hyperlegible Placeholder",
-    sans-serif;
-  background-color: #461220;
-  margin-inline: 0.5rem;
-  padding: 0.5rem;
-  padding-inline: 1rem;
+	display: flex;
+	justify-content: space-between;
+	border-radius: 0.5rem;
+	font-family: "Atkinson Hyperlegible", "Atkinson Hyperlegible Placeholder",
+		sans-serif;
+	background-color: #461220;
+	margin-inline: 0.5rem;
+	padding: 0.5rem;
+	padding-inline: 1rem;
+	gap: 2rem;
 }
